--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.tresejercicios"> <!-- Asegúrate de que coincida con el paquete de tu proyecto -->
 
     <application
         android:allowBackup="true"
@@ -12,15 +13,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Practico1DSM"
         tools:targetApi="31">
+
+        <!-- Actividad Principal -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Actividad para calcular el promedio -->
+        <activity
+            android:name=".PromedioActivity"
+            android:exported="false" /> <!-- No es la actividad principal, no necesita intent-filter -->
+
+        <!-- Actividad para calcular el salario -->
+        <activity
+            android:name=".DescuentosActivity"
+            android:exported="false" /> <!-- No es la actividad principal, no necesita intent-filter -->
+
+        <!-- Actividad para la calculadora -->
+        <activity
+            android:name=".CalculadoraActivity"
+            android:exported="false" /> <!-- No es la actividad principal, no necesita intent-filter -->
+
     </application>
 
 </manifest>
